cmake_minimum_required(VERSION 3.15)
project(mian)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")


set(PROJECT_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
include_directories(${PROJECT_INCLUDE_DIR})

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

set(EXECUTABLE_INSTALL_DIR ${CMAKE_SOURCE_DIR}/bin)
set(LIB_INSTALL_DIR ${CMAKE_SOURCE_DIR}/lib)
set(HEADER_INSTALL_DIR ${PROJECT_INCLUDE_DIR}/${PROJECT_NAME})

add_subdirectory(src)
add_subdirectory(tests)
